--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ RUN git log --name-status HEAD^..HEAD
 
 RUN npm install
 
-RUN npm run build
+RUN npm run build:prod
 
 FROM nginx:stable-alpine
 
