Update docker settings

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,8 @@
 FROM alpine:latest as builder
-
 ARG BASENAME
 ENV BASENAME=$BASENAME
 
-RUN apk add --no-cache git nodejs npm
+RUN apk add git nodejs npm
 
 RUN npm install npm@latest -g
 
@@ -19,18 +18,8 @@ RUN git log --name-status HEAD^..HEAD
 
 RUN npm install
 
-RUN npm run build:prod
+RUN npm run build
 
-FROM nginx:stable-alpine
-
-COPY nginx/nginx.conf /etc/nginx/conf.d
-
-COPY entrypoint.sh /entrypoint.sh
+FROM cora-nginx:latest
 
 COPY --from=builder /diva-react-spa/dist /usr/share/nginx/html
-
-RUN rm /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-
-CMD sh /entrypoint.sh
