--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,25 +1,5 @@
-FROM alpine:latest as builder
-ARG BASENAME
-ENV BASENAME=$BASENAME
+FROM nginx:latest
 
-RUN apk add git nodejs npm
+COPY /dist /usr/share/nginx/html
 
-RUN npm install npm@latest -g
-
-RUN git clone https://github.com/lsu-ub-uu/diva-react-spa.git
-
-WORKDIR diva-react-spa
-
-RUN git status
-
-RUN git pull
-
-RUN git log --name-status HEAD^..HEAD
-
-RUN npm install
-
-RUN npm run build:prod
-
-FROM cora-nginx:latest
-
-COPY --from=builder /diva-react-spa/dist /usr/share/nginx/html
+COPY /nginx/nginx.conf /etc/nginx
